CreatureFight-V1-master/CreatureFightV1 (Numeric) Student/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.11.jar;C:\Program Files (x86)\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files (x86)\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files (x86)\Greenfoot\lib\lang-stride.jar;C:\Program Files (x86)\Greenfoot\lib\nsmenufx-2.1.4.jar;C:\Program Files (x86)\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files (x86)\Greenfoot\lib\guava-17.0.jar;C:\Program Files (x86)\Greenfoot\lib\javassist-3.18.0.jar;C:\Program Files (x86)\Greenfoot\lib\commons-vfs2-2.0.jar;C:\Program Files (x86)\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files (x86)\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files (x86)\Greenfoot\lib\httpmime-4.1.1.jar;D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student
-d
D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\doc
-encoding
UTF-8
-charset
UTF-8
D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\Charmander.java
<---- end of javadoc command ---->
Loading source file D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\Charmander.java...
D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\Charmander.java:25: error: invalid method declaration; return type required
    public charmander(world world) {
           ^
D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\Charmander.java:28: error: illegal start of expression
    }
    ^
D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\Charmander.java:35: error: illegal start of expression
    public void act() 
    ^
D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\Charmander.java:35: error: ';' expected
    public void act() 
          ^
D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\Charmander.java:35: error: ';' expected
    public void act() 
                     ^
D:\CreatureFight-V1-master\CreatureFight-V1-master\CreatureFightV1 (Numeric) Student\Charmander.java:51: error: reached end of file while parsing
}
 ^
6 errors
